# wizard-app

./: .gitignore  CLAUDE.md  LICENSE  README.md  justfile
scripts/: generate_icons.py
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/colors/blue/: icon.icns
src-tauri/icons/colors/green/: icon.icns
src-tauri/icons/colors/indigo/: icon.icns
src-tauri/icons/colors/orange/: icon.icns
src-tauri/icons/colors/red/: icon.icns
src-tauri/icons/colors/violet/: icon.icns
src-tauri/icons/colors/yellow/: icon.icns
src-tauri/src/: commands.rs  icon.rs  lib.rs  main.rs  settings.rs
ui/: index.html  settings.html
