[package]
name = "wizard-app"
version = "0.1.1"
edition = "2021"

[lib]
name = "wizard_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSImage", "NSColor", "NSWindow", "objc2-core-foundation"] }
objc2-foundation = { version = "0.3", features = ["NSString"] }
